fix: replace ES with OS

--- a/docs/developer-docs/5.39.x/architecture/deployment-modes/development.mdx
+++ b/docs/developer-docs/5.39.x/architecture/deployment-modes/development.mdx
@@ -39,13 +39,13 @@ In the diagram above, we can see that the default VPC setup consists of three su
 <br />
 We can also see that AWS Lambda functions are located in all three subnets. This is because, by
 default, AWS runs AWS Lambda functions in multiple AZs to ensure it is highly available in case of
-an AZ failure. The same cannot be said for the Amazon ElasticSearch Service <diagram-letter>
+an AZ failure. The same cannot be said for the Amazon OpenSearch Service <diagram-letter>
   h
 </diagram-letter>, which is only deployed in a single AZ <diagram-letter>C</diagram-letter>.
 
 <Alert type="info">
 
-The Amazon ElasticSearch Service is only deployed with the **Amazon DynamoDB + Amazon ElasticSearch Service** setup.
+The Amazon OpenSearch Service is only deployed with the **Amazon DynamoDB + Amazon OpenSearch Service** setup.
 
 For more information, visit the [Different Setups](/docs/{version}/get-started/install-webiny#pick-your-database) sections.
 
@@ -55,6 +55,6 @@ Development mode is a reasonable choice when it comes to development environment
 
 ## FAQ
 
-### Is Amazon ElasticSearch Service deployed into multiple AZs?
+### Is Amazon OpenSearch Service deployed into multiple AZs?
 
-In the development mode, it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs, hence the production mode. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
+In the development mode, it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs, hence the production mode. Check out the [Amazon OpenSearch Service's FAQ page](https://aws.amazon.com/opensearch-service/faqs/) for more information.
