--- a/docs/developer-docs/5.39.x/architecture/deployment-modes/introduction.mdx
+++ b/docs/developer-docs/5.39.x/architecture/deployment-modes/introduction.mdx
@@ -17,7 +17,7 @@ import { Alert } from "@/components/Alert";
 
 The **Core** and **API** project application can be deployed in two different deployment modes: **development** and **production**.
 
-This is simply because, for development purposes, not all of the production cloud infrastructure resources are needed. For example, for improved security posture, the production mode will deploy all of your AWS Lambda functions into a custom [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) with private subnets. It will also deploy your [Amazon Elastic Search Service](https://aws.amazon.com/elasticsearch-service/) into multiple availability zones (AZs), in order to provide high availability.
+This is simply because, for development purposes, not all of the production cloud infrastructure resources are needed. For example, for improved security posture, the production mode will deploy all of your AWS Lambda functions into a custom [Virtual Private Cloud (VPC)](https://aws.amazon.com/vpc/) with private subnets. It will also deploy your [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/) into multiple availability zones (AZs), in order to provide high availability.
 
 <Alert type="info">
 
