--- a/docs/developer-docs/5.39.x/architecture/deployment-modes/production.mdx
+++ b/docs/developer-docs/5.39.x/architecture/deployment-modes/production.mdx
@@ -44,11 +44,11 @@ The most prominent change, when compared to the development mode, is the inclusi
 <br />
 <br />
 
-With this network structure, you are given the opportunity to place mission-critical cloud infrastructure resources into the private subnets <diagram-letter>D</diagram-letter> <diagram-letter>E</diagram-letter>, which makes these resources more secure, because they are not directly exposed to the public internet. This is especially important when talking about hosting databases, for example the Amazon ElasticSearch Service <diagram-letter>H</diagram-letter>.
+With this network structure, you are given the opportunity to place mission-critical cloud infrastructure resources into the private subnets <diagram-letter>D</diagram-letter> <diagram-letter>E</diagram-letter>, which makes these resources more secure, because they are not directly exposed to the public internet. This is especially important when talking about hosting databases, for example the Amazon OpenSearch Service <diagram-letter>H</diagram-letter>.
 
 <Alert type="info">
 
-With the Amazon ElasticSearch Service <diagram-letter>H</diagram-letter> placed inside of a private subnet, note that you can't connect to it directly from your machine. [Deploying a jump-box (bastion host)](https://aws.amazon.com/blogs/security/how-to-record-ssh-sessions-established-through-a-bastion-host/) in a public subnet can resolve this problem.
+With the Amazon OpenSearch Service <diagram-letter>H</diagram-letter> placed inside of a private subnet, note that you can't connect to it directly from your machine. [Deploying a jump-box (bastion host)](https://aws.amazon.com/blogs/security/how-to-record-ssh-sessions-established-through-a-bastion-host/) in a public subnet can resolve this problem.
 
 </Alert>
 
@@ -60,7 +60,7 @@ Note that the number of distinct AZs depends on the region you're deploying to a
 
 <Alert type="danger">
 
-Have in mind that hosting your application in multiple availability zones may incur additional cost, since some of the cloud infrastructure resources need to be deployed multiple times. For example, this is true for Amazon ElasticSearch Service <diagram-letter>h</diagram-letter>.
+Have in mind that hosting your application in multiple availability zones may incur additional cost, since some of the cloud infrastructure resources need to be deployed multiple times. For example, this is true for Amazon OpenSearch Service <diagram-letter>h</diagram-letter>.
 
 </Alert>
 
@@ -80,11 +80,11 @@ If this presents a problem, you may want to integrate a different solution, like
 
 ## FAQ
 
-### Is Amazon ElasticSearch Service <diagram-letter>h</diagram-letter> deployed into multiple AZs?
+### Is Amazon OpenSearch Service <diagram-letter>h</diagram-letter> deployed into multiple AZs?
 
 For the production setup, that is true. For development setup, it is deployed into a single AZ, just for cost reasons.
 
-Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
+Check out the [Amazon OpenSearch Service's FAQ page](https://aws.amazon.com/opensearch-service/faqs/) for more information.
 
 ### How is API Gateway communicating with AWS Lambda functions if it's outside of the VPC?
 
