--- a/docs/developer-docs/5.39.x/architecture/website/overview.mdx
+++ b/docs/developer-docs/5.39.x/architecture/website/overview.mdx
@@ -53,7 +53,7 @@ For brevity, the diagram doesn't include network-level cloud infrastructure reso
 
 <Alert type="info">
 
-Note that the Amazon DynamoDB and Amazon ElasticSearch databasesare deployed as part of the [Core](/docs/{version}/architecture/core/overview) project application. Also, the GraphQL Handler AWS Lambda function is deployed as part of the [API](/docs/{version}/architecture/api/overview) project application
+Note that the Amazon DynamoDB and Amazon OpenSearch databases are deployed as part of the [Core](/docs/{version}/architecture/core/overview) project application. Also, the GraphQL Handler AWS Lambda function is deployed as part of the [API](/docs/{version}/architecture/api/overview) project application
 
 These are still included in the diagram, just so it's more clear to the reader.
 
