--- a/docs/developer-docs/5.39.x/core-development-concepts/basics/project-deployment.mdx
+++ b/docs/developer-docs/5.39.x/core-development-concepts/basics/project-deployment.mdx
@@ -158,10 +158,6 @@ The command first finds all packages that are located in the project application
 
 We're aware of this fact, and this is mainly because of the [Amazon OpenSearch Service](https://aws.amazon.com/opensearch-service/). While other cloud infrastructure resources get deployed reasonably fast, this service can take anywhere from 15 to 30 minutes to become ready.
 
-Unfortunately, this is a well-known issue for quite some time, and until the present, there haven't been any positive improvements.
-
-In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
-
 ### SubscriptionRequiredException: The AWS Access Key Id needs a subscription for the service
 
 In some cases, upon deploying a new Webiny project, it's possible for users to experience the following error being thrown in their terminal:
@@ -251,8 +247,10 @@ C:\my-new-project\.webiny\pulumi-cli\win32\pulumi\credentials.json
 
 ### Can I deploy Webiny on personal server or platforms like Docker or Digital Ocean?
 
-The short answer is No!  
-Webiny is designed to run on top of the AWS cloud. It uses various AWS serverless offerings like Lambda,DynamoDB, and others. This design allows Webiny to scale automatically with demand, requires zero maintenance, and costs a fraction compared to solutions running on virtual machines.  
+The short answer is no.  
+
 Webiny cannot be deployed on a personal server or platforms like Docker or Digital Ocean because Webiny is a serverless application, meaning it doesn't need a server for installation. Instead, it's built on top of serverless infrastructure like AWS Lambda and DynamoDB to enable scalability and reliability.
-When you create a Webiny project on your local machine, you then deploy it, it creates various serverless resources on AWS.
-You can find more details about the development and deployment principals in this [article](/docs/{version}/core-development-concepts/development/local-development).
+
+When you create a Webiny project on your local machine, you then deploy it, which creates various serverless resources on AWS.
+
+You can find more details about the development and deployment principles in this [article](/docs/{version}/core-development-concepts/development/local-development).
