--- a/docs/handbook/company/how-we-make-users-happy.mdx
+++ b/docs/handbook/company/how-we-make-users-happy.mdx
@@ -25,4 +25,4 @@ The customers that work with us are in for the long run. They are looking for a 
 
 Not necessarily. We will only commit items to the roadmap that we believe will benefit the majority of our customers, we don't do one-offs. But we will always make sure that we understand your needs and that we are building the right things for you.
 
-In case we don't commit your item to the roadmap, we will always provide you with a workaround or a solution that will get you unblocked. Typically this means adding new extension points, hooks and lifecycle events, followed by a set of tutorials that will enable your team to implement the feature themselves.
+In case we don't commit your item to the roadmap, we will always provide you with a workaround or a solution that will get you unblocked. Typically this means adding new extension points, hooks and lifecycle events, followed by a set of tutorials that will enable your team to implement the feature themselves. We'll always have your back! 
