Updates to handbook articles

--- a/docs/handbook/company/deciding-what-features-to-build.mdx
+++ b/docs/handbook/company/deciding-what-features-to-build.mdx
@@ -15,7 +15,7 @@ We run a structured process every quarter around how we go about building our ro
 
 From a typical conversation, we can extract a lot of information and translate those into potential features. By doing this across multiple of our customers we can start to see patterns and identify the most important features that we should build next. Note that we mainly deal with enterprise customers so we're not talking about thousands of interviews, and it's something that we're able to scale as we grow.
 
-Once we've identified certain patterns are can shape them into features, we might go back to those customers and again revalidate that the feature definition is correct, and we also ask them how important this feature is to them. For that, we use a MoSCoW method, where we ask the customer to rate the feature as Must have, Should have, Could have, or Won't have. 
+Once we've identified certain patterns are can shape them into features, we might go back to those customers and again revalidate that the feature definition is correct, and we also ask them how important this feature is to them. For that, we use the [MoSCoW method](https://en.wikipedia.org/wiki/MoSCoW_method), where we ask the customer to rate the feature as Must have, Should have, Could have, or Won't have. 
 
 Each of these ratings is then given a score. If multiple customers say that a certain feature is a Must Have, it will quickly climb up to the top of our priority list. Eventually, we'll just sort all of the features by their score and this then becomes our priority list.
 
