--- a/docs/handbook/company/our-ethos.mdx
+++ b/docs/handbook/company/our-ethos.mdx
@@ -5,6 +5,13 @@ description: What's the nature of our business, what do we stand for, and what a
 slug: our-ethos
 ---
 
+
+**Note**: Need to rewrite, it feels a bit generic.
+
+/ 
+/
+/ 
+
 Webiny operates on a set of guiding principles that shape our business practices, ensuring a meaningful experience for our customers and the broader community. These principles define our company ethos.
 
 **1. Empowerment:**
