--- a/docs/handbook/company/how-we-ensure-quality.mdx
+++ b/docs/handbook/company/how-we-ensure-quality.mdx
@@ -5,7 +5,7 @@ description: What measures do we take to guarantee the quality of our product
 slug: how-we-ensure-quality
 ---
 
-Because we primarily work with larger organizations, their needs for reliability and security are very high. The impact of a downtime or security breach comes to them at a much higher cost. Any downtime or performance degradations can cost them thousands of dollars per minute. We are aware of these and have taken measures to ensure the quality of our product.
+Because we primarily work with larger organizations, their needs around reliability and security are very high. The impact of downtime or a security breach comes to them at a much higher cost. Any performance degradation can cost them thousands of dollars per minute. We are aware of these and have taken measures to ensure the quality of our product.
 
 ## Satisfying our customers' expectations
 
@@ -15,7 +15,7 @@ Let's take a deeper dive and see what this means in practice.
 
 Firstly, [we work very closely with our customers](/docs/handbook/company/deciding-what-features-to-build#customer-driven-roadmap) and this allows us to have a deep understanding of their needs for our product. We know exactly what new features to build and what existing features to improve. Our customers not only influence our roadmap but take an active role in helping us build the required features. 
 
-We also don't focus on just big things. Because we're pretty much chatting with our customers and their engineering teams daily, we see the small things, the irks that annoy them, but not enough to call it a bug or to raise a feature request. Well, we fix those things too for them.
+We also don't focus on just big things. Because we're pretty much chatting with our customers and their engineering teams daily, we see the small things, the irks that annoy them, but not enough to call it a bug or to raise a feature request. We'll, we fix those things too for them.
 
 When it comes to security, there is no compromise. We documented our security posture in a separate article [here](/docs/overview/features/security). You're never done with security, it's a continuous process, and we're constantly improving.
 
@@ -28,19 +28,21 @@ To ensure Webiny stays reliable at all times and that it accounts for all the ab
 
 ## Security 
 
-Security posture for us has 2 sides. One is the security of the infrastructure our product runs on, and the other is the security of the product itself, including the security features that allow our users to configure the product to their needs.
+Security posture for us has 2 sides. One is the security of the infrastructure our product runs on, and the other is the security of the product itself, including the security features that enable our users to configure the product to their needs.
 
 Infrastructure security is something we take very seriously. Many parts go into this, from how things are encrypted, to giving customers the ability to bring in their current security features, like private VPC's, Lambda authorizers, and more. If you're interested in learning more about this, please read our [Security](/docs/overview/features/security) article.
 
 When it comes to the security features of the application itself. We tick the regular boxes like having the ability to bring your own IdP, the ability to customize both the authentication and the authorization workflows, and more. We also support features like roles, API keys, and the ability to manage users inside teams. 
 
-We go further than that. We allow users to structure their content, be that headless CMS entries, Page Builder pages, or assets, into folders and then assign on a folder level who can access and which access levels they have across all the entries in that folder. Files inside our File Manager can be marked as "private", so even if you share a direct link with someone, they will not be able to access that file unless they are authorized to do that. 
+We go further than that. We allow users to structure their content, be that headless CMS entries, Page Builder pages, or assets, into folders and then assign on a folder level who can access the items inside that folder. Files inside our File Manager can be marked as "private", so even if you share a direct link with someone, they will not be able to access that file unless they are authorized to access it. 
 
 Our security posture and features keep evolving as our users push the product further and share even more complex use-cases with us. 
 
 
 ## Quality assurance
 
+todo
 
 ## Framework as a product
 
+todo
