--- a/docs/handbook/company/how-we-make-money.mdx
+++ b/docs/handbook/company/how-we-make-money.mdx
@@ -20,7 +20,7 @@ We have a dual-license model. This means that we offer our software under two di
 
 We utilize many tactics to sell our software, combining both inbound and outbound sales. We have a sales team that reaches out to potential customers and we also have a marketing team that creates content to attract potential customers.
 
-We love technical selling, so even if you start off talking business, we love getting in front of your engineering team and doing hour-long technical deep dives, opening the code, doing live coding demos and similar. We want to make sure that you understand our product and that it's a good fit for your project.
+We love technical selling, so even if you start off talking business, we love to get in front of your engineering team and do hour-long technical deep dives, open the code, set up live coding demos and similar. We want to make sure that you understand our product and that it's a good fit for your project.
 
 ## We are either the best solution for you, or we walk away
 
@@ -32,7 +32,7 @@ Our customers deeply care about at least four of the items from the list below:
 
 - ** Performance at scale ** - We are built on top of [AWS](https://aws.amazon.com/) and we utilize many of its serverless services. This means that you can scale your application as much as you want without worrying about performance.
 
-- ** Cost efficiency ** - The cost model of serverless infrastructure is that you pay per usage. This means that you only pay for what you use, you never overpay or underpay. In practice, Webiny can lower your infrastructure costs by up to 80% compared to traditional hosting solutions.
+- ** Cost efficiency ** - The cost model of serverless infrastructure is that you pay per usage. This means that you only pay for what you use, you never overpay or underpay. In practice, Webiny can lower your infrastructure costs by up to 80% compared to traditional hosting solutions. ([read the whitepaper](/resources/benefits-of-a-serverless-cms))
 
 - ** Manage multiple projects/websites ** - Webiny is a platform that allows you to manage multiple projects from a single installation. This means that you can build multiple applications and manage them from a single admin interface significantly reducing your maintenance costs.
 
@@ -50,5 +50,5 @@ Our default pricing model for our enterprise tier is based on several factors, l
 
 Examples like customers having lots of external contributors or customers that deal with user-generated content, where the number of users is not known in advance, are cases where our default pricing model doesn't work. In these cases, we are happy to work with you to find a pricing model that works for both parties.
 
-We can do this because of our self-hosted nature. Our pricing model is not "baked" into our code as you find in most SaaS products. We can easily change it to fit your needs. Our goal is to price you based on the value you're getting out of the product. 
+We can do this because of our self-hosted nature. Our pricing model is not "baked" into our code as you find in most SaaS products. We can easily change it to fit your needs. Our goal is to price based on the value you're getting out of the product. 
 
