--- a/docs/handbook/company/who-are-we-building-for.mdx
+++ b/docs/handbook/company/who-are-we-building-for.mdx
@@ -22,13 +22,13 @@ The buyer persona is the person who is responsible for deciding to purchase Webi
 
 For us, that persona is an important one as we're usually working closely with them to understand their long-term plans and goals, and how Webiny can help them achieve those goals. This in turn helps us make better decisions when it comes to prioritizing features and planning our roadmap. 
 
-The buyer persona cares about things like the total cost of ownership, driving the innovation within the business, the return on investment, and the long-term value that Webiny brings to the table. They also care about things like the security and reliability of the platform, as well as the quality of the support they get from us.
+The buyer persona cares about things like the total cost of ownership, driving the innovation within the business, the return on investment, and the long-term value that Webiny brings to their organization. They also care about things like the security and reliability of the platform, as well as the quality of the support they get from us.
 
 ## User persona
 
 Users are the ones who use the platform daily to do their work. They are usually content editors, marketers, or similar roles. They are not very technical, and they don't need to be. They are usually the ones who are most excited about Webiny because it helps them do their work faster and more efficiently.
 
-With those users, we love to talk about their daily struggles and how Webiny can help them overcome those struggles. We also love to hear their feedback on how we can improve the platform to make their lives easier. They usually have a lot of great ideas, and we love to hear them out. Even a small improvement to the user experience can make a huge difference for them given the frequency of their interactions with the platform.
+With those users, we love to talk about their daily struggles and how Webiny can help overcome them. We also love to hear their feedback on how we can improve the platform to make their lives easier. They usually have a lot of great ideas, and we love to hear them out. Even a small improvement to the user experience can make a huge difference for them given the frequency of their interactions with the platform.
 
 These users deeply care about things like the performance and reliability of the platform as the impact of those on their work is huge. They are also the ones who are most likely to recommend Webiny to their internal peers, so we want to make sure they are happy with the platform.
 
