Updates to handbook articles

--- a/docs/handbook/company/how-we-make-money.mdx
+++ b/docs/handbook/company/how-we-make-money.mdx
@@ -32,7 +32,7 @@ Our customers deeply care about at least four of the items from the list below:
 
 - ** Performance at scale ** - We are built on top of [AWS](https://aws.amazon.com/) and we utilize many of its serverless services. This means that you can scale your application as much as you want without worrying about performance.
 
-- ** Cost efficiency ** - The cost model of serverless infrastructure is that you pay per usage. This means that you only pay for what you use, you never overpay or underpay. In practice, Webiny can lower your infrastructure costs by up to 80% compared to traditional hosting solutions. ([read the whitepaper](/resources/benefits-of-a-serverless-cms))
+- ** Cost efficiency ** - The cost model of serverless infrastructure is that you pay per usage. This means that you only pay for what you use, you never overpay or underpay. In practice, Webiny can lower your infrastructure costs by up to 80% compared to traditional hosting solutions. ([read the whitepaper](https://www.webiny.com/resources/benefits-of-a-serverless-cms))
 
 - ** Manage multiple projects/websites ** - Webiny is a platform that allows you to manage multiple projects from a single installation. This means that you can build multiple applications and manage them from a single admin interface significantly reducing your maintenance costs.
 
