--- a/docs/release-notes/5.39.0/upgrade-guide.mdx
+++ b/docs/release-notes/5.39.0/upgrade-guide.mdx
@@ -95,7 +95,13 @@ If you're using the AWS CloudFormation template, you can add these to the deploy
 
 <Image src={iamUserGroupsSearch} alt="Search for the DeployWebinyProjectGroup2 IAM group" />
 
-Once you've added the above permissions, you can proceed with the next step, which is redeploying your Webiny project.
+#### 3.3 Project Level TS Config
+
+You'll notice that your `tsconfig.build.json` file now simply extends our default config from `@webiny/project-utils`. Make sure you transfer any changes you might have introduced to the original config, into this new config. From this point on, any changes introduced by Webiny will be contained within our base config, to keep your potential changes intact. 
+
+---
+
+You can now proceed with the next step, which is redeploying your Webiny project.
 
 ### 4. Deploy Your Project
 
