fix: minor improvements on upgrade guide

--- a/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
+++ b/docs/release-notes/5.39.0/date-time-and-identity-meta-fields.mdx
@@ -39,7 +39,7 @@ Note that, previously, the `createdBy` field was representing a revision-level v
 
 ### 2. Removed `publishedOn` Field
 
-Prior to this release, every content entry had an `publishedOn` field, which held the date/time when the entry was published.
+Prior to this release, every content entry had a `publishedOn` field, which held the date/time when the entry revision was published.
 
 With this release, we've removed this field because it's no longer necessary. Instead, you use the new set of fields:
 
@@ -47,6 +47,13 @@ With this release, we've removed this field because it's no longer necessary. In
 - `firstPublishedBy` - holds the identity of the user who first published the entry
 - `lastPublishedOn` - holds the date/time when the entry was last published
 - `lastPublishedBy` - holds the identity of the user who last published the entry
+
+Note that if you need to access the revision-level value, you can do so by using the new revision-level fields:
+
+- `revisionFirstPublishedOn` - holds the date/time when the entry revision was first published
+- `revisionFirstPublishedBy` - holds the identity of the user who first published the entry revision
+- `revisionLastPublishedOn` - holds the date/time when the entry revision was last published
+- `revisionLastPublishedBy` - holds the identity of the user who last published the entry revision
 
 ### 3. Existing Meta Field Values Are Now Entry-level, Not Revision-level
 
