feat: update changelog with additional items

--- a/docs/release-notes/5.39.0/changelog.mdx
+++ b/docs/release-notes/5.39.0/changelog.mdx
@@ -185,6 +185,17 @@ As a content creator, you can now jump right into the File Details Drawer from t
 
 <Video src={hcmsEditFileDrawer} alt="Headless CMS - Edit File Drawer" />
 
+## Page Builder
+
+### Increased Memory Size for Export/Import Related AWS Lambda Functions
+
+Prior to this release, the AWS Lambda functions that were used for exporting and importing Page Builder pages, blocks, and templates were using the default memory size of 128 MB. With this release, we've increased the memory size to 512 MB.
+
+This change was necessary because, in some cases, the default memory size was not enough to handle the export/import process, which resulted in the process failing.
+
+### https://github.com/webiny/webiny-js/pull/3825 
+
+
 ## Other Improvements
 
 ### Webiny CLI - Introducing the `webiny open` Command
